Tue Jan 19 22:58:01 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * THANKS:

          . Added more names to the file. ;-)

Tue Jan 19 00:08:42 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/analysis.tex:
        * docs/manual/manual.pdf:

    . Added missing file and regenerated the manual.

Tue Jan 19 00:04:52 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/getting-started/quickstart.tex:

          . Reorganizing the LaTeX files.

        * docs/manual/part1.tex:
        * docs/manual/quickstart.tex:

          Removed these files.

Tue Jan 19 00:03:23 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/getting-started:
        * docs/manual/getting-started.tex:
        * docs/manual/getting-started/install.tex:
        * docs/manual/listings:
        * docs/manual/listings/client-logger.cpp:
        * docs/manual/listings/client-logger.java:
        * docs/manual/manual.pdf:
        * docs/manual/manual.tex:
        * docs/manual/modeling:
        * docs/manual/modeling.tex:
        * docs/manual/runtime.tex:

          . Reorganizing the LaTeX files and manual.

        * docs/manual/runtime/runtime.tex:
        * docs/manual/install.tex:

          Removed this file.

Mon Jan 18 23:48:13 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/extensions.tex:

          . Added \category to the environment.

        * docs/manual/images/cuts-analysis-blocks.pdf:
        * docs/manual/other/drawing-palette.pptx:

          . Updated the image for the analysis toolset.

        * docs/manual/install.tex:

          . Updated the build instructions for the analysis toolset.

        * docs/manual/manual.pdf:

          . Re-generated the documentation.

        * docs/manual/manual.tex:

          . Updated the default settings for listings.

        * docs/manual/runtime/logging.tex:
